# Bot

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  logging.py  main.py
app/agents/: collaborator.py  history.py  media_caption.py  model_factory.py  runner.py  summary.py  tool_agent.py  tool_logging.py  tool_types.py  toolkit.py
app/bot/middlewares/: __init__.py  db_session.py  rate_limit.py  throttle.py  user_context.py
app/bot/routers/: __init__.py  chat.py
app/bot/utils/: __init__.py  messages.py  telegram.py
app/db/: base.py  session.py
app/db/models/: core.py
app/domain/: models.py
app/i18n/: service.py
app/i18n/locales/: en.json
app/services/: conversations.py  error_monitor.py  exceptions.py  external_tools.py  media_caption.py  memory.py  rate_limit.py  search.py  seeds.py  subscriptions.py  user_insights.py
app/utils/: datetime.py  retry.py  tokens.py
db/: schema.sql
docs/: audit.md  init.md  random_emoji_tool.md
docs/agent/: bot_user_commands.md  fogmoe_official_support_customer_service.md  payment_and_subscription.md  privacy_policy_full_text.md
tests/: conftest.py  test_agent_docs_tool.py  test_agent_runner.py  test_agent_tools.py  test_card_activation_debug.py  test_cards.py  test_chat_router.py  test_conversations.py  test_db_session.py  test_error_monitor.py  test_external_tools.py  test_i18n.py  test_integration.py  test_main.py  test_media_caption_formatting.py  test_memory.py  test_messages_utils.py  test_middlewares.py  test_rate_limit.py  test_search.py  test_subscriptions.py  test_summary_agent.py  test_tokens.py  test_tool_logging.py  test_user_insights.py
