[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-ai-bot"
version = "0.1.0"
description = "Async Telegram bot with agentic AI, MySQL persistence, and modular tooling."
requires-python = ">=3.11"
authors = [{ name = "Bot Builder", email = "bot@example.com" }]
dependencies = [
    "aiogram>=3.6.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "pydantic-ai>=0.0.15",
    "SQLAlchemy[asyncio]>=2.0.30",
    "asyncmy>=0.2.9",
    "alembic>=1.13.1",
    "python-dateutil>=2.9.0.post0",
    "httpx>=0.27.0",
    "tenacity>=8.2.3",
    "structlog>=24.1.0",
    "redis>=5.0.5",
    "orjson>=3.10.0",
    "babel>=2.15.0",
    "rapidfuzz>=3.9.0"
]
readme = "README.md"

[project.optional-dependencies]
dev = [
    "ruff>=0.4.7",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "mypy>=1.10.0",
    "types-python-dateutil>=2.9.0.20240316"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
